# pbd-toolkit

./: .coveragerc  .dockerignore  .gitignore  BANDIT_FIXES_SUMMARY.md  BANDIT_SECURITY_REPORT.md  Dockerfile  LICENSE_COMPATIBILITY_REPORT.md  LIZENZEN_ZUSAMMENFASSUNG.md  README.md  babel.cfg  bandit-report-fixed.txt  bandit-report.json  bandit-report.txt  check_licenses.py  cli_setup.py  config.py  config_types.json  constants.py  docker-compose.yml  globals.py  license_report.json  main.py  matches.py  mkdocs.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  whitelist.txt
.github/workflows/: ci.yml
Testdaten/synthetic_data_collection/: COLLECTION_STATS.json  DATASET_INVENTORY.csv  README.md  STRUCTURE.md
analytics/: __init__.py  database.py  queries.py  store.py
api/: __init__.py  app.py  middleware.py  models.py  scanner_service.py  server.py
api/routes/: analytics.py  scans.py  system.py
core/: __init__.py  cli.py  cli_setup.py  config.py  config_loader.py  config_types.json  constants.py  context.py  diff.py  doctor.py  entity_types.py  exceptions.py  file_type_detector.py  globals.py  i18n.py  matches.py  post_scan.py  privacy_dimensions.py  processor.py  profiles.py  protocols.py  pseudonymizer.py  redactor.py  resources.py  scan_cache.py  scan_reporting.py  scan_runner.py  scanner.py  severity.py  skip_counters.py  statistics.py  statistics_aggregator.py  writers.py
core/engines/: __init__.py  base.py  gliner_engine.py  llm_retry.py  multimodal_engine.py  ollama_engine.py  openai_engine.py  pydantic_ai_engine.py  regex_engine.py  registry.py  spacy_engine.py  vector_engine.py
core/indexer/: __init__.py  document_indexer.py  pii_queries.py
docs/: ANALYTICAL_ENGINES_EXTENSION_ANALYSIS.md  ANALYTICAL_ENGINES_ZUSAMMENFASSUNG.md  ARCHITEKTUR_ANALYSE_AKTUELL.md  ARCHITEKTUR_ZUSAMMENFASSUNG_AKTUELL.md  CHANGELOG_REFACTORING.md  CONFIG_FILE_EXAMPLE.json  CONFIG_FILE_EXAMPLE.yaml  EXIT_CODES.md  FILE_FORMAT_ADAPTER_IMPLEMENTATION.md  FINAL_STATUS.md  IMPLEMENTATION_ENGINES_EXTENSION.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTIERTE_CLI_VERBESSERUNGEN.md  INTEGRATIONSPLAN_ZUSAMMENFASSUNG.md  NER_NLP_INTEGRATION_ANALYSE.md  NER_VERBESSERUNGEN_UMGESETZT.md  PERFORMANCE_OPTIMIZATIONS.md  PHASE2_SCHRITT1_ABGESCHLOSSEN.md  PHASE2_SCHRITT2_ABGESCHLOSSEN.md  PHASE2_SCHRITT3_ABGESCHLOSSEN.md  PHASE2_SCHRITT4_ABGESCHLOSSEN.md  PLANNING_CLEANUP.md  PLANNING_README.md  QUICK_WINS_UMGESETZT.md  README.md  README_REFACTORING.md  README_en.md  REFACTORING_ABGESCHLOSSEN.md  REFACTORING_ZUSAMMENFASSUNG.md  SECURITY_AND_PRIVACY_ANALYSIS.md  SICHERHEITS_UND_DATENSCHUTZ_ZUSAMMENFASSUNG.md  TEST_STATUS.md  Testabdeckung-Verbesserungsplan.md  UMGESETZTE_SOFORT_PRIORITAETEN.md  UMGESETZTE_VERBESSERUNGEN.md  VERBESSERUNGSVORSCHLAEGE.md  VERBESSERUNGS_CHECKLISTE.md  VERBESSERUNGS_CHECKLISTE_AKTUELL.md  index.md
docs/about/: contributing.md  license.md  project-status.md  roadmap.md  security-analysis.md
docs/archive/: ANALYSE_ZUSAMMENFASSUNG.md  ARCHITEKTUR_ANALYSE.md  ARCHITEKTUR_ZUSAMMENFASSUNG.md  CHANGELOG_NEW_PATTERNS.md  CLI_OPTIONS_AND_OUTPUT_ANALYSIS.md  CLI_OPTIONS_COMPARISON.md  CLI_UND_OUTPUT_VERBESSERUNGEN.md  DATENSCHUTZ_DIMENSIONEN_ANALYSE.md  DATENSCHUTZ_DIMENSIONEN_ZUSAMMENFASSUNG.md  FILE_FORMAT_ADAPTER_IMPLEMENTATION.md  FILE_FORMAT_EVALUATION.md  FILE_FORMAT_EVALUATION_DE.md  FILE_FORMAT_PRIORITIES.md  IMPLEMENTIERTE_OUTPUT_FORMATE.md  IMPLEMENTIERUNGSBEISPIEL_TELEFONNUMMERN.md  NACHSTE_SCHRITTE.md  NAECHSTE_VERBESSERUNGEN.md  NER_NLP_VERBESSERUNGSVORSCHLAEGE.md  NER_OFFENE_VERBESSERUNGEN.md  PHASE1_UMGESETZT.md  PHASE2_UMGESETZT.md  README.md  WEITERE_DATEIFORMATE_EMPFEHLUNGEN.md
docs/developer/: FEATURE_INTEGRATION_PLAN.md  IMPLEMENTATION_CHECKLIST.md  adding-processors.md  architecture.md  config-reference.md  configuration-system.md  engines.md  i18n.md  llm-integration-analysis.md  privacy-focused-statistics-architecture.md  privacy-focused-statistics-plan-de.md  privacy-focused-statistics-plan.md  privacy-focused-statistics-summary.md  pydantic-ai-migration.md  suggested-features.md  testing.md  typer-cli-integration-plan.md  typing.md
docs/getting-started/: configuration.md  docker.md  installation.md  quick-start.md
docs/user-guide/: api-server.md  cli.md  detection-methods.md  file-formats.md  open-source-models.md  output-formats.md  whitelist.md
eval/: README.md  __init__.py  dataset.py  extraction.py  metrics.py  runner.py
file_processors/: __init__.py  base_processor.py  csv_processor.py  docx_processor.py  eml_processor.py  html_processor.py  ical_processor.py  image_processor.py  json_processor.py  markdown_processor.py  mbox_processor.py  msg_processor.py  ods_processor.py  odt_processor.py  pdf_processor.py  pptx_processor.py  properties_processor.py  registry.py  rtf_processor.py  sqlite_processor.py  text_processor.py  vcf_processor.py  xlsx_processor.py  xml_processor.py  yaml_processor.py  zip_processor.py
locales/: base.pot
locales/en/: base.mo
scripts/: _i18n_de_translations.py  check_licenses.py  update_catalog.py
tests/: README.md  __init__.py  conftest.py  test_analytics_queries.py  test_analytics_store.py  test_api.py  test_api_scan.py  test_cli.py  test_config.py  test_config_loader.py  test_context.py  test_doctor_command.py  test_engines.py  test_engines_integration.py  test_entity_types.py  test_eval.py  test_extraction_quality.py  test_file_processor_registry.py  test_file_processors.py  test_file_type_detector.py  test_i18n.py  test_image_processor.py  test_integration.py  test_llm_retry.py  test_magic_detection_integration.py  test_matches.py  test_multimodal_engine.py  test_new_regex_patterns.py  test_output_writers_streaming.py  test_post_scan.py  test_privacy_dimensions.py  test_processor.py  test_processor_engines.py  test_pseudonymizer.py  test_pydantic_ai_engine_multimodal.py  test_pydantic_ai_engine_text.py  test_redactor.py  test_scan_runner.py  test_scanner.py  test_setup.py  (+4 more)
validators/: __init__.py  bic_validator.py  credit_card_validator.py  iban_validator.py  tax_id_validator.py
(+214 files in other folders)
