[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pbd-toolkit"
version = "1.0.0"
description = "Scan directories for personally identifiable information"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "PII Toolkit Contributors" }]
license = { text = "MIT" }
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "beautifulsoup4",
  "pdfminer.six==20260107",
  "tqdm>=4.67.3,<4.70.0",
  "defusedxml>=0.7.1",
  "typer>=0.9.0",
  "rich>=13.0.0",
  "requests>=2.31.0",
  "python-docx~=1.2.0",
  "striprtf~=0.0.29",
  "odfpy~=1.4.1",
  "openpyxl~=3.1.5",
  "xlrd~=2.0.2",
  "extract-msg>=0.41,<0.57",
  "python-pptx~=1.0.2",
  "olefile>=0.46,<1.0.0",
  "PyYAML~=6.0.3",
  "Pillow>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/lichtbaer/pbd-toolkit"

[project.scripts]
pbd-toolkit = "core.cli:cli"

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<9.2.0",
  "pytest-cov~=7.1.0",
  "pytest-mock~=3.15.1",
  "ruff>=0.8.0",
  # numpy>=2.5.0's bundled __init__.pyi uses PEP 695 `type` aliases, which is a
  # hard syntax error for mypy's python_version=3.10 target (see [tool.mypy]).
  "numpy>=1.24.0,<2.5.0",
  "mypy>=1.10.0",
  # Only used to generate a real .xls fixture in tests/test_file_processors.py --
  # xlrd (a runtime dependency) can only read legacy XLS, not write it.
  "xlwt~=1.3.0",
  # gettext catalog tooling (scripts/update_catalog.py) -- pure-Python
  # replacement for xgettext/msgfmt/msginit.
  "babel>=2.14.0",
]
office = [
  "python-docx~=1.2.0",
  "striprtf~=0.0.29",
  "odfpy~=1.4.1",
  "openpyxl~=3.1.5",
  "xlrd~=2.0.2",
  "extract-msg>=0.41,<0.57",
  "python-pptx~=1.0.2",
  "olefile>=0.46,<1.0.0",
  "PyYAML~=6.0.3",
]
images = ["Pillow>=10.0.0"]
gliner = ["gliner~=0.2.26"]
spacy = ["spacy>=3.7.0"]
llm = ["pydantic-ai>=0.0.10,<2.0.0", "pydantic>=2.0.0", "requests>=2.31.0"]
magic = ["python-magic>=0.4.27", "filetype>=1.2.0"]
vector = ["sentence-transformers>=2.2.0"]
# OCR fallback for scanned PDFs (also requires the system 'tesseract' and 'poppler'
# binaries).  When installed, scanned/text-less PDF pages are OCR'd automatically.
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.16.0"]
api = ["fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "pydantic>=2.0.0"]
all = [
  "pytest>=9.0.3,<9.2.0",
  "pytest-cov~=7.1.0",
  "pytest-mock~=3.15.1",
  "python-docx~=1.2.0",
  "striprtf~=0.0.29",
  "odfpy~=1.4.1",
  "openpyxl~=3.1.5",
  "xlrd~=2.0.2",
  "extract-msg>=0.41,<0.57",
  "python-pptx~=1.0.2",
  "olefile>=0.46,<1.0.0",
  "PyYAML~=6.0.3",
  "Pillow>=10.0.0",
  "gliner~=0.2.26",
  "spacy>=3.7.0",
  "pydantic-ai>=0.0.10,<2.0.0",
  "pydantic>=2.0.0",
  "requests>=2.31.0",
  "python-magic>=0.4.27",
  "filetype>=1.2.0",
  "sentence-transformers>=2.2.0",
  "pytesseract>=0.3.10",
  "pdf2image>=1.16.0",
  "fastapi>=0.104.0",
  "uvicorn[standard]>=0.24.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]

[tool.setuptools.package-data]
core = ["config_types.json"]
"*" = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
  "-v",
  "--strict-markers",
  "--tb=short",
  "--cov=.",
  "--cov-report=term-missing",
  "--cov-report=html",
]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')",
  "integration: marks tests as integration tests",
]

[tool.coverage.run]
omit = [
  "tests/*",
  "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
]
# Ratchet floor: measured total was ~67% after the #93 coverage push (previously
# 61% with no gate at all). Set a few points below that measurement so minor
# environment/version drift doesn't flake CI; raise this as coverage improves,
# never lower it without an explicit justification in the PR description.
fail_under = 65

[tool.mypy]
# Pragmatic baseline: catch real bugs (undefined names, bad calls, obvious type
# mismatches) without requiring full annotation coverage yet. Tighten
# per-module (e.g. via `disallow_untyped_defs` overrides) as modules are
# cleaned up. See docs/developer/typing.md for the typing policy.
python_version = "3.10"
files = ["core", "api", "analytics", "file_processors", "validators", "eval"]
exclude = ["^tests/", "^build/", "^output/"]
namespace_packages = true
ignore_missing_imports = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = false

# Config.logger is typed `Logger | None` (a Config can legitimately be built
# without one), but these modules call `self.config.logger.*` at ~80 call
# sites unconditionally, relying on CLI/API always constructing a real
# logger. Narrowing every call site (or threading a resolved-non-None logger
# through) is real follow-up work, not a one-line fix — tracked as the next
# tightening pass rather than done piecemeal here. See issue #94.
[[tool.mypy.overrides]]
module = [
  "core.config",
  "core.scanner",
  "core.processor",
  "core.engines.pydantic_ai_engine",
  "core.engines.vector_engine",
  "core.engines.spacy_engine",
]
disable_error_code = ["union-attr"]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
  ".git",
  ".venv",
  "output",
  "htmlcov",
  "site",
  "locales",
]

[tool.ruff.lint]
# E4/E7/E9: pycodestyle errors; F: pyflakes; W: pycodestyle warnings; I: isort; UP: pyupgrade.
# Full "E" is omitted here to avoid E501 (line length) until long lines are addressed incrementally.
select = ["E4", "E7", "E9", "F", "W", "I", "UP"]

